# marketplace

./: .gitignore  Dockerfile  README.md  openclaw.json
.github/actions/verify-deployment/: action.yml
.github/workflows/: apps.yml  deploy.yml  production-deploy.yml  staging-deploy.yml
apps/attestation-aggregator/: Cargo.toml  Dockerfile
apps/attestation-aggregator/src/: attestation.rs  main.rs
apps/claude-code/: Dockerfile
apps/openclaw/: Dockerfile  deploy.json  entrypoint.sh  openclaw.json
apps/signal-cli/: Dockerfile
config/: defaults.env
config/instances/capacity/: defaults.env  instance.json
config/instances/capacity/skills/: payments.md
config/instances/coding/: defaults.env  instance.json
config/orchestrator/: defaults.env
config/orchestrator/skills/: manage-instances.md
config/skills/: attestation.md  capacity.md  gcp-audit.md  gcp-capacity.md  local-vms.md  payments.md
images/: README.md  mkosi.conf
infra/ansible/: ansible.cfg
infra/ansible/inventory/: production.yml  staging.yml
infra/ansible/playbooks/: deploy.yml
infra/ansible/playbooks/templates/: agent.json.j2
infra/packer/: baremetal-agent-image.pkr.hcl  provision-baremetal-image.sh
infra/scripts/: compute-expected-measurements.py  gcp-vm-launch.sh  measure-boot.sh  vm-launch.sh  vm-status.sh  vm-stop.sh
scripts/: dd-vm.sh  deploy-production.sh  deploy-staging.sh  deploy-vm.sh  vm-startup-production.sh  vm-startup-staging.sh  vm-startup.sh
service/: Dockerfile  app.py  config.py  models.py  payments.py  provisioner.py  requirements.txt  routes.py  scheduler.py
(+1 files in other folders)
