[package]
name = "attestation-aggregator"
version = "0.1.0"
edition = "2021"
description = "Scalable heartbeat, metrics, and attestation aggregator for DD agents"

[dependencies]
axum = "0.7"
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
sha2 = "0.10"
